--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -29,7 +29,7 @@
   text-decoration: none;
   color: #ffffff;
   background-color: #0399d9;
-  padding: 0.5rem;
+  padding-inline: 0.5rem;
   border-radius: 10px;
 }
 
