--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,4 +1,3 @@
-
 .contain {
   width: 100%;
   background-color: #ffffff;
@@ -8,7 +7,7 @@
   align-items: center;
   position: fixed;
   z-index: 1;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   border-bottom: 1px solid #0399d9;
 }
 
@@ -21,7 +20,7 @@
   display: flex;
   gap: 10px;
   padding-right: 3rem;
- 
+
   font-size: 1.5rem;
 }
 
@@ -29,7 +28,8 @@
   text-decoration: none;
   color: #ffffff;
   background-color: #0399d9;
-  padding-inline: 0.5rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
   border-radius: 10px;
 }
 
@@ -54,7 +54,7 @@
     width: 100%;
     justify-content: center;
     z-index: 1;
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
   }
 
   .routesMobile {
@@ -82,15 +82,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-inline:2rem ;
+    padding-inline: 2rem;
   }
-  
+
   .logoMobile img {
     width: 6rem;
   }
 
-  .closeButton{
+  .closeButton {
     display: flex;
-    justify-content:flex-end;
+    justify-content: flex-end;
   }
 }
