--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -48,7 +48,7 @@
   text-align: center;
   height: 300px;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   font-size: 1.5rem;
   background-repeat: no-repeat;
   background-size: cover;
@@ -88,6 +88,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-block:2rem ;
 }
 
 .horariosContain button {
