--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -56,7 +56,7 @@
 }
 
 .mantenimiento {
-  background-image: url("../../assets/repaciones.png");
+  background-image: url("../../assets/reparaciones.png");
 }
 .center {
   background-image: url("../../assets/repuestos.png");
