--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -41,12 +41,11 @@
   width: 30%;
   border-radius: 10px;
   object-fit: cover;
-  height:auto;
+  height: auto;
 }
 
 @media (max-width: 1200px) {
   .subDivContain {
- 
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -57,8 +56,7 @@
     font-size: 1rem;
   }
   .subDivContain img {
- 
-    object-fit:cover ;
+    object-fit: cover;
   }
 }
 
@@ -87,7 +85,10 @@
   .subDivContain img {
     display: none;
   }
-
+  .nosotros {
+    background-image: url("../../assets/thercarCamioneta.jpg");
+    background-size: cover;
+  }
   .mision {
     background-image: url("../../assets/reparaciones.png");
   }
