--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -5,6 +5,7 @@
   background-color: #b9b9b9d5;
   background-image: url("../../assets/Tk.png");
   background-size: cover;
+  background-position-x: center;
 }
 
 .dataContain {
@@ -26,7 +27,7 @@
 }
 
 .divContain {
-  background-color: #0399d9;
+  background-color: #0399d9ad;
   border-radius: 15px;
   padding: 1rem;
 }
@@ -38,10 +39,10 @@
 }
 
 .subDivContain img {
-  width: 30%;
+  width: 300px;
   border-radius: 10px;
   object-fit: cover;
-  height: auto;
+  height: 300px;
 }
 
 @media (max-width: 1200px) {
@@ -90,14 +91,15 @@
     background-size: cover;
   }
   .mision {
-    background-image: url("../../assets/reparaciones.png");
+    background-image: url("../../assets/cotoCamioneta.jpg");
+    background-size: cover;
   }
   .vision {
-    background-image: url("../../assets/truckRed.png");
+    background-image: url("../../assets/vision.jpg");
     background-size: cover;
   }
   .aquien {
-    background-image: url("../../assets/repuesto.png");
+    background-image: url("../../assets/quienyComo.jpg");
     background-position: 0;
     background-size: cover;
   }
