--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -82,7 +82,7 @@
   .subDivContain {
     text-align: center;
     width: 100%;
-    padding:0
+    padding:0;
   }
   .subDivContain p {
     font-size: 1rem;
